<resources>
    <string name="app_name">Sample Login</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">New User?Sign Up</string>
    <string name="signwith">Login with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="facebook_app_id"></string>
    <string name="fb_login_protocol_scheme"></string>
</resources>