<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <!-- Login progress -->


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@mipmap/ic_launcher"
            app:srcCompat="@mipmap/ic_launcher" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="#000000"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="#000000"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/red"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/link_forgot_password"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_marginTop="20dip"
                android:textColor="@color/colorAccent"
                android:text="@string/forgot_password"
                android:gravity="center"
                android:textAllCaps="false"
                android:textSize="15dp" />

            <!-- Link to Login Screen -->
            <TextView
                android:id="@+id/link_signup"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_marginTop="20dip"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textSize="15dp" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="20dip"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/signwith"
            android:textAllCaps="false"
            android:textSize="16dp" />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_signin"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <com.google.android.gms.common.SignInButton
        android:id="@+id/google_signin"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:text="@string/google"
            android:textColor="#000000"
            android:textAllCaps="false"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>